# JoltPhysics

./: CMakeLists.txt  LICENSE  README.md  gem.json
Code/: CMakeLists.txt  joltphysics_api_files.cmake  joltphysics_editor_private_files.cmake  joltphysics_editor_shared_files.cmake  joltphysics_editor_tests_files.cmake  joltphysics_private_files.cmake  joltphysics_shared_files.cmake  joltphysics_tests_files.cmake
Code/Include/JoltPhysics/: BodyData.h  BodyData.inl  ColliderComponentBus.h  ColliderShapeBus.h  EditorColliderComponentRequestBus.h  JoltEditorRigidBodyInterface.h  JoltPhysicsBus.h  JoltPhysicsTypeIds.h  JoltPhysicsTypes.h  JoltRigidBodyInterface.h  MathConversions.h  NativeTypeIdentifiers.h  Utils.h  Utils.inl
Code/Include/JoltPhysics/Configuration/: JoltConfiguration.h  WorldSimulationConfiguration.h
Code/Include/JoltPhysics/Debug/: JoltDebugConfiguration.h  JoltDebugInterface.h
Code/Include/JoltPhysics/Material/: JoltMaterial.h  JoltMaterialConfiguration.h
Code/Include/JoltPhysics/Utilities/: JoltConversions.h
Code/Platform/Android/: joltphysics_shared_files.cmake
Code/Platform/Linux/: joltphysics_shared_files.cmake
Code/Platform/Mac/: joltphysics_shared_files.cmake
Code/Platform/Windows/: PAL_windows.cmake  joltphysics_private_files.cmake
Code/Platform/iOS/: joltphysics_private_files.cmake
Code/Source/: JoltPhysicsModule.cpp  JoltPhysicsModule.h  JoltPhysicsModuleInterface.cpp  JoltPhysicsModuleInterface.h  JoltSceneQueryHelpers.cpp  JoltSceneQueryHelpers.h  NameConstants.cpp  NameConstants.h  Utils.cpp  Utils.h
Code/Source/AzRefactor/: JoltPhysicsSystem.cpp  JoltPhysicsSystem.h  JoltScene.cpp  JoltScene.h  JoltSceneInterface.cpp  JoltSceneInterface.h  JoltSystem.cpp  JoltSystem.h
Code/Source/Clients/: BaseColliderComponent.cpp  BaseColliderComponent.h  BoxColliderComponent.cpp  BoxColliderComponent.h  CapsuleColliderComponent.cpp  CapsuleColliderComponent.h  ComponentDescriptors.cpp  ComponentDescriptors.h  DefaultWorldComponent.cpp  DefaultWorldComponent.h  EditorPrimitiveShapeColliderComponent.cpp  EditorPrimitiveShapeColliderComponent.h  EditorRigidBodyComponent.cpp  EditorRigidBodyComponent.h  EditorShapeColliderComponent.cpp  EditorShapeColliderComponent.h  EditorSimpleShapeColliderComponent.cpp  EditorSimpleShapeColliderComponent.h  EditorStaticRigidBodyComponent.cpp  EditorStaticRigidBodyComponent.h  JoltPhysicsEditorSystemComponent.cpp  JoltPhysicsModule.cpp  JoltPhysicsModuleOld.cpp  JoltPhysicsSystemComponent.cpp  JoltPhysicsSystemComponent.h  JoltRigidBodyComponent.cpp  JoltRigidBodyComponent.h  RigidBody.cpp  RigidBody.h  RigidBodyComponent.cpp  RigidBodyComponent.h  Shape.cpp  Shape.h  ShapeColliderComponent.cpp  ShapeColliderComponent.h  SimpleShapeColliderComponent.cpp  SimpleShapeColliderComponent.h  SphereColliderComponent.cpp  SphereColliderComponent.h  StaticRigidBody.cpp  (+3 more)
Code/Source/Configuration/: JoltConfiguration.cpp  JoltSettingsRegistryManager.cpp  JoltSettingsRegistryManager.h  SystemConfiguration.cpp  SystemConfiguration.h  WorldSimulationConfiguration.cpp
Code/Source/Debug/: JoltDebug.cpp  JoltDebug.h  JoltDebugConfiguration.cpp
Code/Source/Editor/: ColliderAssetScaleMode.cpp  ColliderAssetScaleMode.h  ColliderBoxMode.cpp  ColliderBoxMode.h  ColliderCapsuleMode.cpp  ColliderCapsuleMode.h  ColliderComponentMode.cpp  ColliderComponentMode.h  ColliderComponentModeBus.h  ColliderCylinderMode.cpp  ColliderCylinderMode.h  ColliderOffsetMode.cpp  ColliderOffsetMode.h  ColliderRotationMode.cpp  ColliderRotationMode.h  ColliderSphereMode.cpp  ColliderSphereMode.h  CollisionFilteringWidget.cpp  CollisionFilteringWidget.h  CollisionGroupWidget.cpp  CollisionGroupWidget.h  CollisionGroupsWidget.cpp  CollisionGroupsWidget.h  CollisionLayerWidget.cpp  CollisionLayerWidget.h  CollisionLayersWidget.cpp  CollisionLayersWidget.h  ConfigurationWidget.cpp  ConfigurationWidget.h  ConfigurationWindowBus.h  DebugDraw.cpp  DebugDraw.h  DocumentationLinkWidget.cpp  DocumentationLinkWidget.h  EditorComponentDescriptors.cpp  EditorComponentDescriptors.h  EditorWindow.cpp  EditorWindow.h  EditorWindow.ui  JoltEditorMaterialAsset.cpp  (+13 more)
Code/Source/Editor/ComponentModes/: JoltSubComponentModeBase.h
Code/Source/Material/: JoltMaterial.cpp  JoltMaterialConfiguration.cpp  JoltMaterialManager.cpp  JoltMaterialManager.h  JoltPhysicsMaterial.cpp  JoltPhysicsMaterial.h
Code/Source/Scene/: JoltScene.cpp  JoltScene.h  JoltSceneInterface.cpp  PhysicsSystemCallbacks.cpp  PhysicsSystemCallbacks.h
Code/Source/System/: BodyActivationListener.cpp  BodyActivationListener.h  BodyInterface.cpp  BodyInterface.h  CollisionLayerFilters.cpp  CollisionLayerFilters.h  ContactListener.cpp  ContactListener.h  JoltAllocator.cpp  JoltAllocator.h  JoltBodyInterface.cpp  JoltBodyInterface.h  JoltJobSystemThreaded.cpp  JoltJobSystemThreaded.h  JoltPhysicsSystem.cpp  JoltPhysicsSystem.h  JoltPhysicsSystemInterface.cpp  JoltPhysicsSystemInterface.h  JoltSceneInterface.cpp  JoltSystem.cpp  JoltSystem.h  JoltSystemInterface.cpp  JoltSystemInterface.h  JoltSystemOld.cpp  JoltSystemOld.h  SystemInterface.cpp  SystemInterface.h  WorldSimulationInterface.cpp  WorldSimulationInterface.h  WorldSimulationOwner.cpp  WorldSimulationOwner.h
Code/Source/Tools/: JoltPhysicsEditorModule.cpp  JoltPhysicsEditorSystemComponent.cpp  JoltPhysicsEditorSystemComponent.h
Code/Source/Utilities/: JoltConversions.cpp
Registry/: assetprocessor_settings.setreg
